# cs_487-prj

./: .dockerignore  .gitignore  LICENSE  README.md  analysis_report.md  data-er.md  data-er.mmd  db.docker-compose.yml  docker-compose.yml  open  openapi_schema.json  test_plan.md
.github/workflows/: backend-tests.yml
backend/: .dockerignore  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml
backend/.secrets/: app_key.txt
backend/src/: __init__.py  app.py  auth.py  config.py  context.py  database.py  errors.py  security.py  test_utils.py  utils.py
backend/src/account/: model.py  router.py  tests.py  types.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/database/: __init__.py  dep.py  errors.py  types.py
backend/src/models/: __init__.py  account.py  dummy_model.py  errors.py  filters.py  token.py  user.py
backend/src/routers/: __init__.py  account.py  status.py  test_account.py  test_user.py  token.py  user.py
backend/src/shared/: dep_abc.py  optional.py  result.py  test_optional.py  testing_fixtures.py  todo.py
backend/src/shared/models/: base.py  filters.py
backend/src/status/: router.py  types.py
backend/src/token/: router.py  tests.py
backend/src/transaction/: model.py  router.py  tests.py  types.py
backend/src/user/: .maybe_tests.py  model.py  router.py  tests.py  types.py
database/: Dockerfile  init.sql
database/schema/: category.sql  (+3 more)
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+21 files in other folders)
