[project]
name = "backend"
version = "0.1.0"
description = "Backend API server for finance app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "db-wrapper",
    "fastapi-swagger>=0.4.48",
    "fastapi[standard]>=0.135.3",
    "pyjwt>=2.12.1",
]

[tool.ruff.lint]
select = ["E", "F", "W", "D"]
ignore = ["D107"]

[tool.uv.sources]
db-wrapper = { git = "https://github.com/andrew-chang-dewitt/lib-python-db-wrapper" }

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
